force-app/main/default/objects/Tribute_Portal__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Text__c</fullName>
        <label>Constituent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tributes (Constituent)</relationshipLabel>
        <relationshipName>Tributes_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interim</label>
        <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
        <relationshipLabel>Tributes</relationshipLabel>
        <relationshipName>Tributes_Interim</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_Address__c</fullName>
        <label>Notify Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_Contact_Text__c</fullName>
        <label>Notify Constituent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notify Constituent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tributes (Notify Constituent)</relationshipLabel>
        <relationshipName>Tributes_Notify_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occasion__c</fullName>
        <label>Occasion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Tributes</relationshipLabel>
        <relationshipName>Tributes_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <label>Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Honor of</fullName>
                </value>
                <value>
                    <fullName>In Memory of</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tributee__c</fullName>
        <label>Tributee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tribute (Portal)</label>
    <nameField>
        <label>Tribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tributes (Portal)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>